# OpenFUSIONToolkit

./: .gitignore
app/ThinCurr-C-example-12/: CMakeLists.txt  README.md  compile.sh  tokamak-visualization.ipynb
app/ThinCurr-C-example-13/: CMakeLists.txt  README.md  compile.sh  oftcppin  tokamak-visualization.ipynb
app/ThinCurr-C-example-13/include/: error_utils.hpp  oft_capi.h
app/ThinCurr-C-example-13/src/: main.cpp
app/ThinCurr-C-example-14/: CMakeLists.txt  README.md  tokamak-visualization.ipynb
app/ThinCurr-C-example-14/include/: oft_capi.h
app/ThinCurr-C-example-14/src/: main.cpp
app/ThinCurr-C-example-15/: CMakeLists.txt
app/ThinCurr-C-example-15/src/: main.cpp
src/: CMakeLists.txt
src/physics/: thin_wall_solvers.F90
src/python/wrappers/: thincurr_f.F90
